--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- Fonts -->
+    <link href="https://fonts.cdnfonts.com/css/helvetica-neue-9?styles=49034,49032,49036,49038,49040,49042,49044,49045" rel="stylesheet">
+
+    <!-- FontAwesome -->
+    <script src="https://kit.fontawesome.com/2a35fd37d2.js" crossorigin="anonymous"></script>
+                
+    <!-- FLatIcons -->
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
+    <title>Zomato Colone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
