--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,18 @@
     -->
 
     <!-- Fonts -->
-    <link href="https://fonts.cdnfonts.com/css/helvetica-neue-9?styles=49034,49032,49036,49038,49040,49042,49044,49045" rel="stylesheet">
+    <!-- <link href="https://fonts.cdnfonts.com/css/helvetica-neue-9?styles=49034,49032,49036,49038,49040,49042,49044,49045" rel="stylesheet"> -->
 
     <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/2a35fd37d2.js" crossorigin="anonymous"></script>
                 
     <!-- FLatIcons -->
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-regular-rounded/css/uicons-regular-rounded.css'>
-    <title>Zomato Colone</title>
+
+    <link rel="stylesheet" type="text/css" charset="UTF-8" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.css" /> 
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
+
+    <title>Zomato Clone</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
